[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-systems-failure-analyzer"
version = "1.0.0"
description = "OpenEnv-compatible distributed systems failure analyzer environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.135.3",
  "uvicorn==0.44.0",
  "pydantic==2.12.5",
  "openai==2.31.0",
  "python-multipart==0.0.24",
  "openenv-core>=0.2.3"
]

[project.scripts]
server = "server.app:main"
